# cookiecutter-django

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: conftest.py  test_cookiecutter.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.root_package}}/: settings.py
