[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
homepage = "{{ cookiecutter.project_url }}"
repository = "{{ cookiecutter.project_url }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
packages = [
    { include = "{{ cookiecutter.root_package }}" }
]
license = "{{ cookiecutter.project_license }}"
classifiers = [
    "Intended Audience :: Developers",
{% if cookiecutter.project_license == 'Proprietary' -%}
    "Private :: Do Not Upload",
{%- endif %}
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "~{{ cookiecutter.python_version }}"
django = "^3.2"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
{% if cookiecutter.database == "postgresql" -%}
psycopg2 = "^2.9.5"
{%- endif %}
sentry-sdk = "^1.10.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
black = "^22.10.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
import-linter = "^1.4.0"
mkdocs-material = "^8.5.7"
mkdocstrings = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["tests", "{{ cookiecutter.root_package }}"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
follow_imports = "silent"
scripts_are_modules = true
namespace_packages = true
no_implicit_optional = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.root_package }}.settings"
looponfailroots = "{{ cookiecutter.root_package }}"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "C90", "I", "UP"]
ignore = ["E203"]
